### Change vendor name of the docker image (HEAD -> main)
>Mon, 9 May 2022 14:51:24 +0200

>Author: Jean-Christophe Malapert (jean-christophe.malapert@cnes.fr)

>Commiter: Jean-Christophe Malapert (jean-christophe.malapert@cnes.fr)




### Add new WKTs Update website (logo, the display of WKTs) (tag: v0.9.0)
>Mon, 9 May 2022 14:31:17 +0200

>Author: Jean-Christophe Malapert (jean-christophe.malapert@cnes.fr)

>Commiter: Jean-Christophe Malapert (jean-christophe.malapert@cnes.fr)




### Add section with virtual env Add section with docker (origin/main, origin/HEAD)
>Fri, 9 Jul 2021 07:29:18 +0200

>Author: Jean-Christophe Malapert (jean-christophe.malapert@cnes.fr)

>Commiter: Jean-Christophe Malapert (jean-christophe.malapert@cnes.fr)




### Fix path
>Thu, 8 Jul 2021 13:32:28 +0200

>Author: Jean-Christophe Malapert (jean-christophe.malapert@cnes.fr)

>Commiter: Jean-Christophe Malapert (jean-christophe.malapert@cnes.fr)




### Fix path ... again
>Thu, 8 Jul 2021 13:26:31 +0200

>Author: Jean-Christophe Malapert (jean-christophe.malapert@cnes.fr)

>Commiter: Jean-Christophe Malapert (jean-christophe.malapert@cnes.fr)




### Fix typo Fix path to get the WKTs
>Thu, 8 Jul 2021 13:21:49 +0200

>Author: Jean-Christophe Malapert (jean-christophe.malapert@cnes.fr)

>Commiter: Jean-Christophe Malapert (jean-christophe.malapert@cnes.fr)




### Publish data directory Add environment variable in dockerfile
>Thu, 8 Jul 2021 13:05:11 +0200

>Author: Jean-Christophe Malapert (jean-christophe.malapert@cnes.fr)

>Commiter: Jean-Christophe Malapert (jean-christophe.malapert@cnes.fr)




### Fix text in Makefile Fix date in build.sh
>Thu, 8 Jul 2021 12:16:35 +0200

>Author: Jean-Christophe Malapert (jean-christophe.malapert@cnes.fr)

>Commiter: Jean-Christophe Malapert (jean-christophe.malapert@cnes.fr)




### Add docker support
>Thu, 8 Jul 2021 12:05:48 +0200

>Author: Jean-Christophe Malapert (jean-christophe.malapert@cnes.fr)
