@@ -19,7 +19,7 @@
 set search
 set ps
 
-search=`docker images | grep pole_surfaces/planet_crs_registry | wc -l`
+search=`docker images | grep pdssp/planet_crs_registry | wc -l`
 if [ $search = 0 ];
 then
 	# only the heaader - no image found
@@ -27,21 +27,21 @@ then
 	exit 1
 fi
 
-ps=`docker ps -a | grep pole_surfaces-planet_crs_registry | wc -l`
+ps=`docker ps -a | grep pdssp-planet_crs_registry | wc -l`
 if [ $ps = 0 ];
 then
 	echo "no container available, start one"
-	docker run --name=pole_surfaces-planet_crs_registry \
+	docker run --name=pdssp-planet_crs_registry \
 	-p 8080:8080 \
-	pole_surfaces/planet_crs_registry
+	pdssp/planet_crs_registry
 	exit $?
 fi
 
-ps=`docker ps | grep pole_surfaces-planet_crs_registry | wc -l`
+ps=`docker ps | grep pdssp-planet_crs_registry | wc -l`
 if [ $ps = 0 ];
 then
 	echo "container available but not started, start it"
-	docker start pole_surfaces-planet_crs_registry
+	docker start pdssp-planet_crs_registry
 else
 	echo "container already started"
 fi
